<resources>

    <string name="welcome_speech">欢迎使用外勤作业系统</string>
    <string name="app_name">外勤作业系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Check</string>
    <string name="location">顺位</string>
    <string name="car_number">车号</string>
    <string name="notes">记事</string>
    <string name="time">时间</string>
    <string name="check">外勤作业系统 : 确报</string>
    <string name="title_car">外勤作业系统 : 车辆</string>
    <string name="USER_DM">USER_DM</string>
    <string name="order">正</string>
    <string name="reverse_order">反</string>
    <string name="in_order">顺:</string>
    <string name="start">开始</string>
    <string name="empty">无内容</string>
    <string name="speech_positive">正序工作方式</string>
    <string name="speech_negative">反序工作方式</string>
    <string name="default_ip">210.75.98.59</string>
    <string name="default_port">80</string>
    <string name="processing">操作中</string>

    <!-- For report screen -->
    <string name="sw">顺位：</string>
    <string name="ch">车号：</string>
    <string name="cz">车种：</string>
    <string name="fz">发站：</string>
    <string name="dz">到站：</string>
    <string name="pm">品名：</string>
    <string name="jsl">记事栏：</string>
    <string name="zdnr">重点内容：</string>
    <string name="sfcz">是否操作：</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="up">上</string>
    <string name="tts">语音播报</string>
    <string name="stop_tts">停止播报</string>
    <string name="down">下</string>
    <string name="retrun">返回</string>
    <string name="message_load_task">任务加载中…</string>
    <string name="message_no_task_found">没有任务详情</string>

    <!-- For Setting screen -->
    <string name="setting_basic">网络设置</string>
    <string name="setting_ip_title">IP</string>
    <string name="setting_ip_summary">IP地址设置</string>
    <string name="setting_port_title">端口</string>
    <string name="setting_port_summary">端口号设置</string>
    <string name="setting_order">顺位</string>
    <string name="setting_train_id">车号</string>
    <string name="setting_train_type">车种</string>
    <string name="setting_station_start">发站</string>
    <string name="setting_station_stop">到站</string>
    <string name="setting_product">品名</string>
    <string name="setting_record">记事栏</string>
    <string name="setting_importance">重点内容</string>
    <string name="setting_report_content">确报播报内容</string>

    <!-- For Login screen -->
    <string name="login_title">外勤作业系统</string>
    <string name="login_user_code">代码</string>
    <string name="login_password">密码</string>
    <string name="login_role">岗位</string>
    <string name="login_name">姓名</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="message_query">查询中…</string>
    <string name="message_login">登录中…</string>
    <string name="message_logout">注销中…</string>
    <string name="error_message_no_user_found">无效代码，请重新输入！</string>
    <string name="error_message_login_fail">登录失败，错误码  %d</string>
    <string name="error_message_connect_fail">网络连接失败， 请检查设置</string>
    <string name="ok">确定</string>

    <!-- For Checker screen -->
    <string name="checker_title">外勤系统:货检作业</string>
    <string name="complete">完成</string>
    <string name="voice">语音</string>
    <string name="voice_stop">停止</string>
    <string name="feedback">回执</string>
    <string name="train_order">车次</string>
    <string name="track">股道</string>
    <string name="position">位置</string>
    <string name="notification">通知</string>
    <string name="product_check">货检</string>
    <string name="report_index">第%s条,</string>
    <string name="toast_no_content_id">此记录为整单</string>
    <string name="toast_logout_success">注销成功</string>
    <string name="toast_logout_fail">注销失败</string>
    <string name="voice_complete_task">该任务已结束</string>
</resources>