<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/train_order"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/track"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/notification"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</LinearLayout>
