<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/label_user_code"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_user_code"/>

        <EditText
            android:id="@+id/edit_user_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg_selector"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/label_password"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_password"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg_selector"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/label_role"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_role"/>

        <EditText
            android:id="@+id/edit_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg_selector"
            android:enabled="false"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/label_name"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_name"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg_selector"
            android:enabled="false"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/toolbar_bg"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:text="@string/login"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:enabled="false"
            android:drawableTop="@drawable/ic_login"
            android:background="@drawable/clicker_bg_selector"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/exit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:text="@string/exit"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:drawableTop="@drawable/ic_exit"
            android:background="@drawable/clicker_bg_selector"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/setting"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:text="@string/setting"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:drawableTop="@drawable/ic_settings"
            android:background="@drawable/clicker_bg_selector"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
